# terrarium

./: .gitignore  Cargo.toml  README.md
.claude/: CLAUDE.md
docs/: ARCHITECTURE.md  CONCEPT.md  MVP.md  OBSERVER_PROTOCOL.md  TUI.md
examples/: inequality.toml  scarcity.toml  tribe.toml
scenarios/: antarctica.toml  exoplanet.toml  first_winter.toml  mars_colony.toml  space_station.toml
src/: action.rs  chronicle.rs  config.rs  engine.rs  environment.rs  groups.rs  llm.rs  main.rs  observer.rs  trade.rs  world.rs
src/agent/: beliefs.rs  identity.rs  memory.rs  mod.rs  personality.rs  relations.rs
src/crafting/: materials.rs  mod.rs  recipes.rs  tools.rs
src/observation/: chronicle.rs  events.rs  mod.rs
src/structures/: mod.rs  recipes.rs  types.rs
src/tui/: app.rs  input.rs  mod.rs  ui.rs
src/tui/widgets/: agent.rs  events.rs  mod.rs  trades.rs  world.rs
src/world/: mod.rs  terrain.rs
